--- a/hw17/hw17.tex
+++ b/hw17/hw17.tex
@@ -50,7 +50,7 @@
 
 \thispagestyle{plain}
 \begin{flushright}
-\large{\textbf{TYPE YOUR NAME HERE \\
+\large{\textbf{Geoffrey Parker - grp352 \\
 HW 17: 3.180-3.22\\
 M328K \\
 March 27th, 2012 \\}}
@@ -78,19 +78,22 @@ system modulo $n$ that satisfy the following linear congruences:
 \begin{enumerate}
 \item $26x \equiv 14 \pmod{3}$.
 \begin{proof}[Solution]
-Type your solution here!
+All integers $x$ such that $x \equiv 1 \pmod{3}$.
 \end{proof}
 \item $2x \equiv 3 \pmod{5}$.
 \begin{proof}[Solution]
-Type your solution here!
+All integers $x$ such that $x \equiv 4 \pmod{5}$.
 \end{proof}
 \item $4x \equiv 7 \pmod{8}$.
 \begin{proof}[Solution]
-Type your solution here!
+No solution.
 \end{proof}
 \item $24x \equiv 123 \pmod{213}$. (This congruence is tedious to do by
 trial and error, so perhaps we should defer work on it for now and
 instead try to develop some techniques that might help.)
+\begin{proof}[Solution]
+See 3.22.
+\end{proof}
 \end{enumerate}
 \end{exer}
 
@@ -101,9 +104,11 @@ Let $a$, $b$, and $n$ be integers with $n > 0$.  Show that $ax
 integers $x$ and $y$ such that $ax + ny = b$.
 \end{thm}
 \begin{proof}[Proof]
-Type your proof here!
+Let $a$, $b$, and $n$ be integers with $n > 0$.  We will show that $ax \equiv b \pmod{n}$ has a solution if and only if there exist integers $x$ and $y$ such that $ax + ny = b$. \\
+First, assume that $ax \equiv b \pmod{n}$ has a solution $x$.  Then $n \mid ax - b$.  Using the definition of divides, let $-y$ be the integer such that $n(-y) = ax - b$.  So $ax + ny = b$.\\
+Now assume that there exist integers $x$ and $y$ such that $ax + ny = b$.  Then $ax - b = -ny$, so by the definition of divides $n \mid ax - b$.  Therefore by the definition of congruence mod n, $ax \equiv b \pmod{n}$.
 \end{proof}
-
+-
 %%%Theorem 3.20%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{thm}
 Let $a$, $b$, and $n$ be integers with $n > 0$. The equation $ax
@@ -111,7 +116,17 @@ Let $a$, $b$, and $n$ be integers with $n > 0$. The equation $ax
 \end{thm}
 
 \begin{proof}[Proof]
-Type your proof here!
+Let $a$, $b$, and $n$ be integers with $n > 0$. We will show that the equation $ax \equiv b \pmod{n}$ has a solution if and only if $(a, n) \mid b$.\\
+
+First, assume that $ax \equiv b \pmod{n}$ has a solution $x$.  By theorem ??, there exist integers $j$ and $k$ such that $aj + nk = (a, n)$.  So $n(-k) = aj - (a, n)$ and $n \mid aj - (a, n)$ Also, by the definition of congruence modulo n, $n \mid ax - b$.  So by theorem 1.1, $n \mid ax - b + aj - (a, n)$, and by the definition of divides $nm = a(x+j) - b - (a, n)$ for some integer $m$.  Then for some integers $c$ and $d$, 
+\[c(a, n)m = d(a, n)(x+j) - b - (a, n).\]
+Rearranging this gives us :
+\[-cm(a, n) + d(x+j)(a, n) - (a, n) = b\]
+or:
+\[(a, n)(d(x+j) - cm - 1) = b.\]
+Since $d(x+j) - cm - 1$ is an integer, $(a, n) \mid b$.\\
+
+Now assume that $(a, n) \mid b$.  By the definition of divides there exists some integer $m$ such that $(a, n)m = b$.  And by theorem ??, there exist integers $j$ and $k$ such that $aj + nk = (a, n)$.  Multiplying both sides by $m$ gives us $m(aj + nk) = b$, or $ajm - b = nm(-k)$.  So by the definition of divides $n \mid ajm - b$, and if we let $x = jm$, then by the definition of congruence modulo n, we have $ax \equiv b \pmod{n}$.
 \end{proof}
 
 
@@ -123,7 +138,7 @@ in Exercise $3.18$ above?
 \end{ques}
 
 \begin{proof}[Solution]
-Type your solution here!
+Because $(24, 213) = 3$ and $123 = 3 \times 41$, we know by theorem 3.20 that a solution to $24x \equiv 123 \pmod{213}$ exists.
 \end{proof}
 
 
@@ -137,6 +152,6 @@ the canonical complete residue system modulo $213$ that satisfy $24x
 \end{exer}
 
 \begin{proof}[Solution]
-Type your solution here!
+We will find all integers $x$ in the canonical complete residue system modulo $213$ such that $24x \equiv 123 \pmod{213}$ using the extended euclidean algorithm.
 \end{proof}
 \end{document}
