--- a/hw21/hw21.tex
+++ b/hw21/hw21.tex
@@ -89,6 +89,7 @@ Let $a$ and $n$ be natural numbers with $(a, n) = 1$ and let $k =
 pairwise incongruent modulo $n$.
 \end{thm}
 \begin{proof}[Proof]
+et $a$ and $n$ be natural numbers with $(a, n) = 1$ and let $k = \ord_n(a)$.  We will show the numbers $a^1$, $a^2$, $\dots$, $a^k$ are pairwise incongruent modulo $n$.  Assume by way of contradiction that there exist two natural numbers $i$ and $j$ such that $1 \leq i, j \leq k$, $i \neq j$, and $a^i \equiv a^j \pmod{n}$.  Assume without loss of generality that $i > j$.  Let $m = i - j$ so $i = j + m$ and $0 < m < k$.  Then $a^i = a^ja^m$ and $a^j = a^j \cdot 1$.  Now substituting into our congurence, we obtain $a^ja^m \equiv a^j1 \pmod{n}$.  Therefore by theorem 4.5 $a^m \equiv 1 \pmod{n}$.  However, $m < k$ and $k$ is defined to be the smallest natural number such that $a^k$ is congruent to 1 modulo $n$, so we have a contradiction.
 \end{proof}
 
 %%%Theorem 4.9%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -98,6 +99,7 @@ Let $a$ and $n$ be natural numbers with $(a, n) = 1$ and let $k =
 $n$ to one of the numbers~$a^1$, $a^2$, $\hdots$, $a^k$.
 \end{thm}
 \begin{proof}[Proof]
+Let $a$ and $n$ be natural numbers with $(a, n) = 1$ and let $k = \ord_n(a)$.  Let $m$ be any arbitrary natural number.  We will show that $a^m$ is congruent modulo $n$ to one of the numbers~$a^1$, $a^2$, $\hdots$, $a^k$.  If $m \leq k$, then $a^m \equiv a^m \pmod{n}$ so we're done.  In the case that $m > k$, use the division algorithm to find two integers $q$ and $r$ such that $m = qk + r$ where $0 \leq r < k$.  If $r = 0$, then let $s = q - 1$ and $t = k$, otherwise let $s = q$ and $t = r$. So $m = sk + t$ and $0 < t \leq k$.   Now $a^{sk} = (a^k)^s$, and because $a^k \equiv 1 \pmod{n}$, we can say by theorem 1.18 that $(a^k)^s \equiv 1^s \pmod{n}$.  Then by theorem 1.??  $a^{ks}a^t \equiv 1a^t \pmod{n}$ or equivalently $a^m \equiv a^t$.  Therefore since $0 < t \leq k$, we have shown that $a^m$ is congruent modulo $n$ to one of the numbers~$a^1$, $a^2$, $\hdots$, $a^k$.
 \end{proof}
 
 %%%Theorem 4.10%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -108,6 +110,11 @@ Let $a$ and $n$ be natural numbers with $(a, n) = 1$, let $k =
 \pmod{n}$ if and only if $k|m$.
 \end{thm}
 \begin{proof}[Proof]
+Let $a$ and $n$ be natural numbers with $(a, n) = 1$, let $k = \ord_n(a)$, and let $m$ be a natural number.  Use the division algorithm to find integers $q$ and $r$ such that $m = qk + r$ where $0 \leq r < k$.  Then $a^{qk} = (a^k)^q$ and since $a^k \equiv 1 \pmod{n}$,  by theorem 1.18 $(a^k)^q \equiv 1^q \pmod{n}$.  By theorem 1.??  $a^{qk}a^r \equiv 1a^r \pmod{n}$ and $a^m \equiv a^r \pmod{n}$.\\
+
+If $k \mid m$, then $r$ will equal $0$, so $a^r = 1$ and $a^m \equiv 1 \pmod{n}$.\\
+
+If $k \nmid m$ then assume by way of contradiction that $a^m \equiv 1 \pmod{n}$.  In this case, by theorem 1.11 $a^r \equiv 1 \pmod{n}$ and since $0 < r < k$, this contradicts the definition of $k$ as $\ord_n(a)$.
 \end{proof}
 
 %%%Theorem 4.11%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
